# topon

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/npjcompmat/: generate_figures.ipynb
demos/npjcompmat/data/: convert_pkl_to_csv.py  dataset.pkl  npj_style_v1.py
demos/npjcompmat/data/csv/: README.md  analysis_msid.csv  analysis_rdf_amorphous.csv  mechanics.csv  (+4 more)
docs/: cg_ensemble_execution.md  cli.md  config_reference.md  simbox.md
topon/: __init__.py  __main__.py  cli.py  pipeline.py
topon/analysis/: __init__.py  report.py
topon/assignment/: __init__.py  attributor.py  defects.py  dp_distribution.py  edge_types.py  entanglements.py  manager.py  node_types.py
topon/chemistry/: __init__.py  builder.py  sequences.py
topon/chemistry/charmm/: __init__.py
topon/chemistry/dreiding/: __init__.py
topon/chemistry/kg/: __init__.py
topon/config/: __init__.py  loader.py  schema.py  validator.py
topon/conformation/: __init__.py  manager.py
topon/conformation/entanglement/: __init__.py
topon/conformation/packing/: __init__.py
topon/conformation/placement/: __init__.py
topon/core/: __init__.py  graph.py
topon/forcefield/: DreidingX6parameters.txt  __init__.py  dreiding.py  kremer_grest.py
topon/simbox/: __init__.py  inputs.py  library.py  molecule.py  packer.py  system.py  workflow.py  writer.py
topon/simulation/: __init__.py  runner.py
topon/simulation/protocols/: __init__.py
topon/singlechain/: solubility.py  workflow.py
topon/topology/: __init__.py  generator.py  generator_python.py  loader.py
topon/topology/network/: __init__.py
topon/topology/sequence/: __init__.py
topon/topology/simple/: __init__.py
topon/utils/: __init__.py  network_config.py  network_helpers.py
topon/workflows/: __init__.py  atomistic_network.py  cg_network.py  reactive_crosslink.py
topon/writers/: __init__.py  graphml_writer.py  lammps_atomistic.py  lammps_cg.py  lammps_data.py  lammps_inputs.py
(+982 files in other folders)
